added navbar complete

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-One</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- google font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    
+<body class="inter-font">
+    <header>
+        <!-- nav section -->
+         <nav class="container">
+            <div>
+                <img src="./assets/logo-navbar.png" alt="">
+            </div>
+            <div>
+                <ul class="nav-link">
+                    <li><a href="">Features</a></li>
+                    <li><a href="">How It Works</a></li>
+                    <li><a href="">Why It's Different</a></li>
+                </ul>
+            </div>
+            <button class="btn-primary">Get Early Access</button>
+         </nav>
+    </header>
 </body>
 </html>
