hero section complete and hover effect added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<!-- font-awsome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+
 </head>
 <body class="inter-font">
     <header>
@@ -27,5 +30,23 @@
             <button class="btn-primary">Get Early Access</button>
          </nav>
     </header>
+    <main>
+        <!-- hero section -->
+         <section id="hero">
+            <div class="hero-content">        
+                   <div>
+                       
+                     <h3><i class="fa-solid fa-circle"></i> Early Access Now Open</h3>
+                   </div>
+                <h1>Structured Thinking,<br><span class="green-line">Not Just Note-Taking.</span></h1>
+                <p>A private space to store notes, links, and learning summaries — designed to <br>
+help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+<div class="btn-container">
+        <button class="btn-primary hero-btn">Start Building Your Vault  <img class="btn-img" src="./assets/ArrowRight.png" alt=""></button>
+        <button class="btn-secondery"> <i class="fa-solid fa-play"></i> See How It Works</button>
+    </div>
+</div>
+         </section>
+    </main>
 </body>
 </html>
