--- a/index.html
+++ b/index.html
@@ -47,6 +47,42 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
     </div>
 </div>
          </section>
+         <!-- Note Card section -->
+          <section id="noteCard" class="container">
+            <!-- text content -->
+            <div class="text-note">
+                <h2>
+Notes don't fail, Structure does.</h2>
+<p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <!-- cards -->
+            <div class="card-container">
+                <!--single card -->
+                <div class="card">
+                    <img src="./assets/Vector.png" alt="">
+                    <h4>Scattered notes</h4>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <!--single card -->
+                <div class="card">
+                    <img src="./assets/Bookmarks.png" alt="">
+                    <h4>Bookmark overload</h4>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <!--single card -->
+                <div class="card">
+                    <img src="./assets/Brain.png" alt="">
+                    <h4>No idea connections</h4>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <!--single card -->
+                <div class="card">
+                    <img src="./assets/Info.png" alt="">
+                    <h4>Forgetting what you learned</h4>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+          </section>
     </main>
 </body>
 </html>
