--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-One</title>
     <link rel="stylesheet" href="styles/styles.css">
     <!-- google font -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-<!-- font-awsome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <!-- font-awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
 </head>
+
 <body class="inter-font">
     <header>
         <!-- nav section -->
-         <nav class="container">
+        <nav class="container">
             <div>
                 <img src="./assets/logo-navbar.png" alt="">
             </div>
@@ -28,32 +32,33 @@
                 </ul>
             </div>
             <button class="btn-primary">Get Early Access</button>
-         </nav>
+        </nav>
     </header>
     <main>
         <!-- hero section -->
-         <section id="hero">
-            <div class="hero-content">        
-                   <div>
-                       
-                     <h3><i class="fa-solid fa-circle"></i> Early Access Now Open</h3>
-                   </div>
+        <section id="hero">
+            <div class="hero-content">
+                <div>
+
+                    <h3><i class="fa-solid fa-circle"></i> Early Access Now Open</h3>
+                </div>
                 <h1>Structured Thinking,<br><span class="green-line">Not Just Note-Taking.</span></h1>
                 <p>A private space to store notes, links, and learning summaries — designed to <br>
-help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-<div class="btn-container">
-        <button class="btn-primary hero-btn">Start Building Your Vault  <img class="btn-img" src="./assets/ArrowRight.png" alt=""></button>
-        <button class="btn-secondery"> <i class="fa-solid fa-play"></i> See How It Works</button>
-    </div>
-</div>
-         </section>
-         <!-- Note Card section -->
-          <section id="noteCard" class="container">
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                <div class="btn-container">
+                    <button class="btn-primary hero-btn">Start Building Your Vault <img class="btn-img"
+                            src="./assets/ArrowRight.png" alt=""></button>
+                    <button class="btn-secondery"> <i class="fa-solid fa-play"></i> See How It Works</button>
+                </div>
+            </div>
+        </section>
+        <!-- Note Card section -->
+        <section id="noteCard" class="container">
             <!-- text content -->
             <div class="text-note">
                 <h2>
-Notes don't fail, Structure does.</h2>
-<p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                    Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
             </div>
             <!-- cards -->
             <div class="card-container">
@@ -82,7 +87,45 @@ Notes don't fail, Structure does.</h2>
                     <p>Knowledge fades because there's no system to retain it.</p>
                 </div>
             </div>
-          </section>
+        </section>
+        <!-- solution section -->
+        <section class="container">
+            <div id="solution">
+                <!-- img-content -->
+                <div>
+                    <img src="./assets/knowledge.png" alt="">
+                </div>
+                <!-- text-content -->
+                <div class="solution">
+                   <div class="textOne">
+                     <h3>The Solution</h3>
+                    <h2>Your Second Brain,
+                        Structured By Design.</h2>
+                    <p>Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every
+                        note, link, and summarybecomes part of an interconnected web of understanding.</p>
+                   </div>
+                 <div class="textTow">
+                       <div class="solution-feature">
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+                    <div class="solution-feature">
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p>Connect related concepts automatically as you write</p>
+                    </div>
+                    <div class="solution-feature">
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p>Build lasting knowledge through reflection prompts</p>
+                    </div>
+                    <div class="solution-feature">
+                        <img src="./assets/CheckCircle.png" alt="">
+                        <p>Find anything instantly with semantic search</p>
+                    </div>
+                 </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
