--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
                 </div>
             </div>
         </section>
+        <!-- challenge -->
+         <section class="container challenge">
+            <div class="challenge-text">
+                <h3>Ready to think more clearly?</h3>
+                <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+                    <button class="btn-primary early">Get Early Access</button>
+                    <p>Free during early access • No credit card needed</p>
+            </div>
+         </section>
     </main>
 </body>
 
