footer section added

--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@
             </div>
          </section>
     </main>
+    <!-- footer -->
+     <footer>
+        <div class="endGame">
+            <img src="./assets/logo-footer.png" alt="">
+            <!-- social links -->
+            <div class="social">
+                <h3>Social Links</h3>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+        </div>
+        <hr>
+        <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+     </footer>
 </body>
 
 </html>
