fixed bug related hover and footer

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <p>A private space to store notes, links, and learning summaries — designed to <br>
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 <div class="btn-container">
-                    <button class="btn-primary hero-btn">Start Building Your Vault <img class="btn-img"
-                            src="./assets/ArrowRight.png" alt=""></button>
+                    <button class="btn-primary hero-btn">Start Building Your Vault <i
+                            class="fa-solid fa-arrow-right"></i></button>
                     <button class="btn-secondery"> <i class="fa-solid fa-play"></i> See How It Works</button>
                 </div>
             </div>
@@ -97,59 +97,71 @@
                 </div>
                 <!-- text-content -->
                 <div class="solution">
-                   <div class="textOne">
-                     <h3>The Solution</h3>
-                    <h2>Your Second Brain,
-                        Structured By Design.</h2>
-                    <p>Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every
-                        note, link, and summarybecomes part of an interconnected web of understanding.</p>
-                   </div>
-                 <div class="textTow">
-                       <div class="solution-feature">
-                        <img src="./assets/CheckCircle.png" alt="">
-                        <p>Capture ideas with structure built-in from day one</p>
+                    <div class="textOne">
+                        <h3>The Solution</h3>
+                        <h2>Your Second Brain,
+                            Structured By Design.</h2>
+                        <p>Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where
+                            every
+                            note, link, and summarybecomes part of an interconnected web of understanding.</p>
                     </div>
-                    <div class="solution-feature">
-                        <img src="./assets/CheckCircle.png" alt="">
-                        <p>Connect related concepts automatically as you write</p>
+                    <div class="textTow">
+                        <div class="solution-feature">
+                            <img src="./assets/CheckCircle.png" alt="">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="solution-feature">
+                            <img src="./assets/CheckCircle.png" alt="">
+                            <p>Connect related concepts automatically as you write</p>
+                        </div>
+                        <div class="solution-feature">
+                            <img src="./assets/CheckCircle.png" alt="">
+                            <p>Build lasting knowledge through reflection prompts</p>
+                        </div>
+                        <div class="solution-feature">
+                            <img src="./assets/CheckCircle.png" alt="">
+                            <p>Find anything instantly with semantic search</p>
+                        </div>
                     </div>
-                    <div class="solution-feature">
-                        <img src="./assets/CheckCircle.png" alt="">
-                        <p>Build lasting knowledge through reflection prompts</p>
-                    </div>
-                    <div class="solution-feature">
-                        <img src="./assets/CheckCircle.png" alt="">
-                        <p>Find anything instantly with semantic search</p>
-                    </div>
-                 </div>
                 </div>
             </div>
         </section>
         <!-- challenge -->
-         <section class="container challenge">
+        <section class="container challenge">
             <div class="challenge-text">
                 <h3>Ready to think more clearly?</h3>
-                <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
-                    <button class="btn-primary early">Get Early Access</button>
-                    <p>Free during early access • No credit card needed</p>
+                <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit
+                    card required.</p>
+                <button class="btn-primary early">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
+                <p>Free during early access • No credit card needed</p>
             </div>
-         </section>
+        </section>
     </main>
     <!-- footer -->
-     <footer>
-        <div class="endGame">
+    <footer>
+        <div class="endGame container">
             <img src="./assets/logo-footer.png" alt="">
             <!-- social links -->
             <div class="social">
                 <h3>Social Links</h3>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
+                <ul>
+                    <li><a href="">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a></li>
+                    <li><a href="">
+
+                            <i class="fa-brands fa-instagram"></i>
+                        </a></li>
+                    <li><a href="">
+
+                            <i class="fa-brands fa-facebook"></i>
+                        </a></li>
+                </ul>
             </div>
         </div>
         <hr>
         <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
-     </footer>
+    </footer>
 </body>
 
 </html>
